Name:                   happ-store
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               A simple storage system for Hackage packages 
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Server
                        Application
                        Application.Types
                        Cabal
                        Cabal.Preferred
                        Pages.Home
                        Pages.NotFound
                        Handlers
                        Handlers.Browse
                        Handlers.Chunks
                        Handlers.People
                        Handlers.Submit
                        Handlers.App
                        Handlers.Login
                        Handlers.Session
                        Routes
                        Templates.Master
                        Schema
                        Session
                        Imports
  Build-Depends:        base >= 4.8 && < 5
                      , acid-state
                      , attoparsec
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , Cabal
                      , containers
                      , data-default
                      , directory
                      , errors
                      , exceptions
                      , hashable
                      , http-client
                      , http-client-tls
                      , http-types
                      , ixset
                      , lucid
                      , markup >= 3.1.0
                      , memory
                      , MissingH
                      , mmorph
                      , monad-control
                      , monad-logger
                      , mtl
                      , nested-routes >= 7.1.1
                      , path-extra >= 0.0.3
                      , regex-compat
                      , resourcet
                      , safecopy
                      , saltine
                      , split
                      , stm
                      , text
                      , transformers
                      , time
                      , timemap >= 0.0.4
                      , unordered-containers >= 0.2
                      , urlpath >= 5.0.0.1
                      , utf8-string
                      , wai
                      , wai-extra
                      , wai-transformers >= 0.0.5
                      , wai-middleware-verbs >= 0.3.0
                      , wai-middleware-content-type
                      , webpage

Executable happ-store
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
                      , main
  GHC-Options:          -Wall -with-rtsopts=-T
  Main-Is:              Main.hs
  Other-Modules:        Main.Options
                        Application
                        Application.Types
                        Cabal
                        Pages.Home
                        Pages.NotFound
                        Handlers
                        Handlers.Browse
                        Handlers.Chunks
                        Handlers.People
                        Handlers.Submit
                        Handlers.App
                        Handlers.Login
                        Handlers.Session
                        Routes
                        Templates.Master
                        Schema
                        Session
                        Imports
  Build-Depends:        base >= 4.8 && < 5
                      , acid-state
                      , attoparsec
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , Cabal
                      , containers
                      , directory
                      , data-default
                      , ekg
                      , errors
                      , exceptions
                      , hashable
                      , http-client
                      , http-client-tls
                      , http-types
                      , ixset
                      , lucid
                      , markup
                      , memory
                      , MissingH
                      , mmorph
                      , monad-control
                      , monad-logger
                      , mtl
                      , nested-routes
                      , optparse-applicative
                      , path-extra
                      , regex-compat
                      , resourcet
                      , safecopy
                      , saltine
                      , split
                      , stm
                      , text
                      , transformers
                      , time
                      , timemap
                      , urlpath
                      , unordered-containers >= 0.2
                      , utf8-string
                      , warp
                      , wai-extra
                      , wai-transformers
                      , wai-middleware-content-type
                      , webpage
                      , yaml

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , quickcheck-instances

Source-Repository head
  Type:                 git
  Location:             git@github.com:athanclark/happ-store
